--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Core Dependencies
 pandas>=2.0.0
 numpy>=1.24.0
-pandas-ta>=0.4.0
+# pandas-ta
 pyyaml>=6.0
 
 # CLI Dependencies
@@ -13,4 +13,11 @@ click>=8.1.0
 PyQt6>=6.6.0
 pyqtgraph>=0.13.3
 qtawesome>=1.3.0
-# pyqtdarktheme>=2.1.0  # Optional: may fail on Python 3.12+, app works without it
+
+# Development
+pytest>=7.0
+pytest-cov>=4.0
+
+# Export
+fpdf2>=2.7.0
+openpyxl>=3.1.0
