--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,14 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = {text = "MIT"}
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Madhushan Andawaththa"}
 ]
 dependencies = [
     "pandas>=2.0.0",
     "numpy>=1.24.0",
+    "pyyaml>=6.0",
     "PyQt6>=6.6.0",
+    "pyqtgraph>=0.13.3",
     "qtawesome>=1.3.0",
     "pyqtdarktheme>=2.1.0",
     "fpdf2>=2.7.0",
@@ -29,6 +31,7 @@ dev = [
     "isort>=5.12",
     "flake8>=6.0",
     "mypy>=1.6",
+    "pre-commit>=3.6",
 ]
 
 [build-system]
